<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditarInformacion">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/IbRegresar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="12dp"
            android:src="@drawable/ic_regresar"
            android:contentDescription="@string/regresar"/>

        <TextView
            android:id="@+id/txt_titulo_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_titulo_edit"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#cccccc" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <RelativeLayout
                android:id="@+id/perfilRL"
                android:layout_width="120dp"
                android:layout_height="120dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_perfil"
                    android:src="@drawable/ic_img_perfil"
                    android:scaleType="centerCrop"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>

                <ImageView
                    android:id="@+id/IvEditarImg"
                    android:src="@drawable/marker_9403572"
                    android:layout_alignParentEnd="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/editar_imagen"/>
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TILNombres"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nombres"
                    android:hint="@string/et_nombres"
                    android:inputType="textPersonName|textCapWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Actualizar"
                android:text="@string/btn_Actualizar"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"
                app:cornerRadius="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
